--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@next/bundle-analyzer": "^14.2.15",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "22.7.7",
