--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
     "@next/bundle-analyzer": "^14.2.15",
+    "framer-motion": "^11.11.9",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
