--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.11.9",
     "lenis": "^1.1.14",
     "next": "14.2.14",
+    "nextjs-google-analytics": "^2.3.7",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^10.0.0",
